--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,5 @@
-Flask==2.3.2
-mysql-connector-python==8.0.34
+Flask==2.3.3.
+Flask-SQLAIchemy==3.1.1.
+Flask-Login==0.6.3
+mysqlclient==2.2.4
+python-dotenv==1.0
