--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,13 +1,19 @@
-
 tasks:
-  - command: python app.py
+  - name: Setup MySQL
+    init: |
+      sudo apt-get update
+      sudo apt-get install -y mysql-server mysql-client
+      sudo mkdir -p /workspace/mysql-data /workspace/mysql-logs
+      sudo mysqld_safe --datadir=/workspace/mysql-data \
+                       --log-error=/workspace/mysql-logs/error.log \
+                       --pid-file=/workspace/mysql-logs/mysql.pid \
+                       --skip-grant-tables \
+                       --skip-networking=0 \
+                       --bind-address=0.0.0.0 &
+    command: |
+      echo "MySQL está rodando"
+      mysql --version
 
-
-
-vscode:
-  extensions:
-    - mtxr.sqltools-driver-sqlites (see https://www.gitpod.io/docs/introduction/learn-gitpod/gitpod-yaml)
-    - mtxr.sqltools-driver-sqlite# and commit this file to your remote git repository to share the goodness with others.
-    - mtxr.sqltools-driver-sqlite# Learn more from ready-to-use templates: https://www.gitpod.io/docs/introduction/getting-started/quickstart
-    - mtxr.sqltools-driver-sqlitetasks:
-  - command: python app.py
+ports:
+  - port: 3306
+    onOpen: ignore
